[metadata]
name = p3p-arpruss
version = 1.0.1
author = Alexander Pruss
author_email = arpruss@gmail.com
description = P3P lambda twist
long_description = file: README.TXT
long_description_content_type = text/plain
url = https://github.com/pypa/p3p
project_urls =
    Bug Tracker = https://github.com/pypa/p3p/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.5

[options.packages.find]
where = .
